--- a/Phase 1/SimplyBlogging/styles.css
+++ b/Phase 1/SimplyBlogging/styles.css
@@ -4,7 +4,13 @@
     box-shadow:0px 0px 10px var(--clr-gray-ned);
 }
 #div-container{
-    display: flex;
-    flex-wrap: wrap;
     margin: 2em 0em;
+}
+
+.imagecss{
+    text-align: center;
+    color: rgb(6, 72, 255);
+    font: 12px;
+    padding: 10px;
+
 }
